[NOT TESTED] implement purge table functionality, added action on toolbar menu but need to create dialog window for confirming the action

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="history">History</string>
     <string name="about">About</string>
     <string name="title_activity_about">AboutActivity</string>
+    <string name="resetall">Reset all</string>
 
 
 </resources>
