added resetall functionality (action in toolbar menu, layout), I need to handle the onClick event on the OK and Cancel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="about">About</string>
     <string name="title_activity_about">AboutActivity</string>
     <string name="resetall">Reset all</string>
+    <string name="title_activity_reset_all">ResetAll</string>
 
 
 </resources>
