--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="editDescription">Description</string>
     <string name="iconMoneyFlows">Money flows</string>
 
+    <string name="settings">Settings</string>
     <string name="history">History</string>
     <string name="about">About</string>
     <string name="title_activity_about">About Activity</string>
