added category Bill set portrait to all layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
         <item>Transportation</item>
         <item>Health</item>
         <item>Pets</item>
+        <item>Bills</item>
 
     </string-array>
 
