delete implemented but need to fix the sql

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
 
     <string name="filterOnList">Filter</string>
     <string name="searchInList">Search</string>
+    <string name="title_activity_details_trx">DetailsTrx</string>
 </resources>
