adjusted onclick on graph

--- a/Docs/ToDo
+++ b/Docs/ToDo
@@ -1,10 +1,8 @@
 Remove landscape view on history 
-After adding, clear cost 
-Remove description label
-Adjust landscape mode 
+ Adjust landscape mode
 Change type of graph with arrows
 User can choose color of the category
 Sorting on history
 Filter on history
-Change item with long pressing
 Reset view every month
+Click on pie chart and get details for that category
