test from work laptop

--- a/Docs/ToDo
+++ b/Docs/ToDo
@@ -1,4 +1,6 @@
-Remove landscape view on history 
+test for commit from work laptop
+
+Remove landscape view on history
  Adjust landscape mode
 Change type of graph with arrows
 User can choose color of the category
