update category and date of items + improvement input screen

--- a/Docs/ToDo
+++ b/Docs/ToDo
@@ -8,3 +8,20 @@ Sorting on history
 Filter on history
 Reset view every month
 Click on pie chart and get details for that category
+
+
+LAYOUT
+Redesign main screen
+
+GRAPH
+Allow changing type of graph
+Select category for specific report
+Single click -> quick info
+Long click -> open a new screen with report
+
+DATA
+History -> change trx date
+Backup data every month
+Add custom category
+
+
